--- a/AdressListWithSwift3/Controller/Contact/Edit/EditContactController.xib
+++ b/AdressListWithSwift3/Controller/Contact/Edit/EditContactController.xib
@@ -1,5 +1,5 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="11201" systemVersion="15G1004" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="11201" systemVersion="16A323" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11161"/>
@@ -45,6 +45,7 @@
             <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
+                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="list_bg" translatesAutoresizingMaskIntoConstraints="NO" id="t8k-rI-gnp"/>
                 <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Yao-Sw-8Wd">
                     <subviews>
                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Rzm-dc-8fE" userLabel="topV">
@@ -110,7 +111,6 @@
                                             </connections>
                                         </textField>
                                     </subviews>
-                                    <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                     <constraints>
                                         <constraint firstItem="kTY-Gj-uF3" firstAttribute="leading" secondItem="fWg-bv-Mex" secondAttribute="leading" constant="24" id="G1X-aY-Aoe"/>
                                         <constraint firstItem="kTY-Gj-uF3" firstAttribute="centerY" secondItem="fWg-bv-Mex" secondAttribute="centerY" id="GIA-VM-7tT"/>
@@ -135,7 +135,6 @@
                                             </connections>
                                         </textField>
                                     </subviews>
-                                    <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                     <constraints>
                                         <constraint firstItem="LIU-D4-ofR" firstAttribute="leading" secondItem="92o-3V-IWj" secondAttribute="trailing" constant="24" id="Gjc-ur-iUj"/>
                                         <constraint firstItem="92o-3V-IWj" firstAttribute="centerY" secondItem="LIU-D4-ofR" secondAttribute="centerY" id="ers-2g-3UD"/>
@@ -159,7 +158,6 @@
                                             </connections>
                                         </textField>
                                     </subviews>
-                                    <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                     <constraints>
                                         <constraint firstItem="k1u-O4-hhg" firstAttribute="centerY" secondItem="DUk-kp-A7c" secondAttribute="centerY" id="8CT-JA-Xhu"/>
                                         <constraint firstItem="M1a-3k-1LL" firstAttribute="leading" secondItem="k1u-O4-hhg" secondAttribute="trailing" constant="24" id="LmO-kg-J3R"/>
@@ -183,7 +181,6 @@
                                             </connections>
                                         </textField>
                                     </subviews>
-                                    <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                     <constraints>
                                         <constraint firstItem="eI8-KM-jFe" firstAttribute="centerY" secondItem="drw-Ic-snw" secondAttribute="centerY" id="Ggj-FN-ELO"/>
                                         <constraint firstItem="qNa-gN-zrC" firstAttribute="leading" secondItem="eI8-KM-jFe" secondAttribute="trailing" constant="24" id="OZa-Hn-RXP"/>
@@ -193,7 +190,6 @@
                                     </constraints>
                                 </view>
                             </subviews>
-                            <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                             <constraints>
                                 <constraint firstItem="NSr-51-ukA" firstAttribute="width" secondItem="fWg-bv-Mex" secondAttribute="width" id="Aon-n1-fME"/>
                                 <constraint firstItem="DUk-kp-A7c" firstAttribute="top" secondItem="NSr-51-ukA" secondAttribute="bottom" id="E1k-6y-gP1"/>
@@ -234,7 +230,7 @@
                                             </connections>
                                         </button>
                                     </subviews>
-                                    <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                    <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                     <constraints>
                                         <constraint firstItem="vr1-tB-5in" firstAttribute="centerY" secondItem="pHM-ca-vEO" secondAttribute="centerY" id="Brt-GU-6Li"/>
                                         <constraint firstItem="vr1-tB-5in" firstAttribute="leading" secondItem="pHM-ca-vEO" secondAttribute="leading" constant="6" id="seX-kn-Ihp"/>
@@ -396,7 +392,6 @@
                                     </constraints>
                                 </view>
                             </subviews>
-                            <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                             <constraints>
                                 <constraint firstItem="KAU-yT-9zR" firstAttribute="centerY" secondItem="Ibg-OE-hew" secondAttribute="centerY" id="0on-uf-kgb"/>
                                 <constraint firstItem="x1S-Ig-KzP" firstAttribute="centerY" secondItem="3dk-se-49a" secondAttribute="centerY" id="3TD-cF-o2d"/>
@@ -591,6 +586,7 @@
                             </constraints>
                         </view>
                         <button opaque="NO" tag="3" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="uWF-yr-sMg">
+                            <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                             <constraints>
                                 <constraint firstAttribute="height" constant="40" id="S3G-zH-hym"/>
                             </constraints>
@@ -645,13 +641,18 @@
             <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
             <constraints>
                 <constraint firstAttribute="trailing" secondItem="Yao-Sw-8Wd" secondAttribute="trailing" id="189-zu-udn"/>
+                <constraint firstItem="t8k-rI-gnp" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" id="4qu-Zm-yiD"/>
+                <constraint firstAttribute="trailing" secondItem="t8k-rI-gnp" secondAttribute="trailing" id="Njy-Cz-OAo"/>
+                <constraint firstAttribute="bottom" secondItem="t8k-rI-gnp" secondAttribute="bottom" id="SNF-al-zYj"/>
                 <constraint firstItem="Yao-Sw-8Wd" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" id="eLj-bc-apP"/>
                 <constraint firstItem="Yao-Sw-8Wd" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" id="ilq-uP-HFf"/>
+                <constraint firstItem="t8k-rI-gnp" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" id="sEP-HI-gCZ"/>
                 <constraint firstAttribute="bottom" secondItem="Yao-Sw-8Wd" secondAttribute="bottom" id="wbn-92-GqG"/>
             </constraints>
         </view>
     </objects>
     <resources>
         <image name="head" width="87" height="87"/>
+        <image name="list_bg" width="700" height="1186"/>
     </resources>
 </document>
