--- a/AdressListWithSwift3/Controller/LeaveList/Detail/LeaveDetailController.xib
+++ b/AdressListWithSwift3/Controller/LeaveList/Detail/LeaveDetailController.xib
@@ -1,5 +1,5 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="11201" systemVersion="15G1004" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="11201" systemVersion="16A323" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11161"/>
@@ -27,7 +27,8 @@
             <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="33F-CX-eyn">
+                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="leavelist_bg" translatesAutoresizingMaskIntoConstraints="NO" id="1j6-M9-4AJ"/>
+                <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" translatesAutoresizingMaskIntoConstraints="NO" id="33F-CX-eyn">
                     <subviews>
                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="78m-9G-nPy" userLabel="topV">
                             <subviews>
@@ -86,7 +87,6 @@
                                             </connections>
                                         </button>
                                     </subviews>
-                                    <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                     <constraints>
                                         <constraint firstItem="fim-BS-zLI" firstAttribute="centerY" secondItem="D5T-ZH-wLB" secondAttribute="centerY" id="3E0-hp-gYl"/>
                                         <constraint firstItem="HAl-xG-NS6" firstAttribute="top" secondItem="D5T-ZH-wLB" secondAttribute="top" id="PHH-pG-AZQ"/>
@@ -121,7 +121,6 @@
                                             </constraints>
                                         </view>
                                     </subviews>
-                                    <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                     <constraints>
                                         <constraint firstAttribute="bottom" secondItem="AQ0-va-Y8A" secondAttribute="bottom" id="9VE-Zc-RbY"/>
                                         <constraint firstAttribute="trailing" secondItem="AQ0-va-Y8A" secondAttribute="trailing" id="CIL-2o-SOd"/>
@@ -156,7 +155,6 @@
                                             <nil key="highlightedColor"/>
                                         </label>
                                     </subviews>
-                                    <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                     <constraints>
                                         <constraint firstAttribute="trailing" secondItem="fco-9y-Luz" secondAttribute="trailing" constant="24" id="5YY-9h-PnO"/>
                                         <constraint firstItem="fco-9y-Luz" firstAttribute="top" secondItem="A2c-sJ-h73" secondAttribute="centerY" id="6F4-lA-UNP"/>
@@ -188,7 +186,6 @@
                                             </constraints>
                                         </view>
                                     </subviews>
-                                    <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                     <constraints>
                                         <constraint firstAttribute="trailing" secondItem="HvV-Jk-Clm" secondAttribute="trailing" id="HmP-rX-udd"/>
                                         <constraint firstAttribute="trailing" secondItem="HvV-Jk-Clm" secondAttribute="trailing" id="Pyr-Jv-a22"/>
@@ -203,7 +200,6 @@
                                     </constraints>
                                 </view>
                             </subviews>
-                            <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                             <constraints>
                                 <constraint firstItem="A2c-sJ-h73" firstAttribute="width" secondItem="Vrx-5j-2IG" secondAttribute="width" id="8KB-r9-USq"/>
                                 <constraint firstItem="A2c-sJ-h73" firstAttribute="top" secondItem="Vrx-5j-2IG" secondAttribute="bottom" id="8dF-hH-wvz"/>
@@ -278,11 +274,15 @@
             <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
             <constraints>
                 <constraint firstAttribute="trailing" secondItem="33F-CX-eyn" secondAttribute="trailing" id="03t-SK-IY5"/>
+                <constraint firstItem="1j6-M9-4AJ" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" id="048-BX-H3y"/>
                 <constraint firstAttribute="trailing" secondItem="eRg-NR-KtV" secondAttribute="trailing" id="7eH-dP-tdo"/>
                 <constraint firstItem="eRg-NR-KtV" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" id="88o-Cf-p0B"/>
+                <constraint firstItem="1j6-M9-4AJ" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" id="KN3-Os-UB4"/>
                 <constraint firstAttribute="bottom" secondItem="33F-CX-eyn" secondAttribute="bottom" id="MkK-LH-9U0"/>
+                <constraint firstItem="eRg-NR-KtV" firstAttribute="top" secondItem="1j6-M9-4AJ" secondAttribute="bottom" id="Nl5-UF-JP1"/>
                 <constraint firstItem="33F-CX-eyn" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" id="UTm-KH-Ywc"/>
                 <constraint firstItem="33F-CX-eyn" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" id="XNx-hV-Mzk"/>
+                <constraint firstAttribute="trailing" secondItem="1j6-M9-4AJ" secondAttribute="trailing" id="l5W-EC-SGX"/>
                 <constraint firstAttribute="bottom" secondItem="eRg-NR-KtV" secondAttribute="bottom" id="xW5-w9-0K5"/>
             </constraints>
             <point key="canvasLocation" x="26.5" y="52.5"/>
@@ -290,5 +290,6 @@
     </objects>
     <resources>
         <image name="head" width="87" height="87"/>
+        <image name="leavelist_bg" width="123" height="220"/>
     </resources>
 </document>
