--- a/AdressListWithSwift3/Controller/LeaveList/Leave/LeaveListController.xib
+++ b/AdressListWithSwift3/Controller/LeaveList/Leave/LeaveListController.xib
@@ -1,5 +1,5 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="11201" systemVersion="15G1004" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="11201" systemVersion="16A323" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11161"/>
@@ -17,8 +17,8 @@
             <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
+                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="leavelist_bg" translatesAutoresizingMaskIntoConstraints="NO" id="CTv-2N-9qW"/>
                 <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" dataMode="none" translatesAutoresizingMaskIntoConstraints="NO" id="bU7-W6-qhD">
-                    <color key="backgroundColor" red="0.96470588235294119" green="0.96470588235294119" blue="0.96470588235294119" alpha="1" colorSpace="calibratedRGB"/>
                     <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="sIn-DC-v0t">
                         <size key="itemSize" width="100" height="130"/>
                         <size key="headerReferenceSize" width="1" height="20"/>
@@ -34,10 +34,17 @@
             <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
             <constraints>
                 <constraint firstAttribute="trailing" secondItem="bU7-W6-qhD" secondAttribute="trailing" id="73o-Gj-K3X"/>
+                <constraint firstAttribute="trailing" secondItem="CTv-2N-9qW" secondAttribute="trailing" id="Ao5-IH-o1q"/>
                 <constraint firstItem="bU7-W6-qhD" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" id="LAd-Vg-0g7"/>
+                <constraint firstItem="CTv-2N-9qW" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" id="N7K-UG-fcU"/>
                 <constraint firstItem="bU7-W6-qhD" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" id="YNy-xq-nQb"/>
+                <constraint firstAttribute="bottom" secondItem="CTv-2N-9qW" secondAttribute="bottom" id="bm8-mz-6oW"/>
                 <constraint firstAttribute="bottom" secondItem="bU7-W6-qhD" secondAttribute="bottom" id="jFq-xF-fFZ"/>
+                <constraint firstItem="CTv-2N-9qW" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" id="kGy-xb-G7a"/>
             </constraints>
         </view>
     </objects>
+    <resources>
+        <image name="leavelist_bg" width="123" height="220"/>
+    </resources>
 </document>
