--- a/AdressListWithSwift3/View/SettingCell/SettingCell.xib
+++ b/AdressListWithSwift3/View/SettingCell/SettingCell.xib
@@ -1,5 +1,5 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="11201" systemVersion="15G1004" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="11201" systemVersion="16A323" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11161"/>
@@ -27,11 +27,21 @@
                         <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
                         <nil key="highlightedColor"/>
                     </label>
+                    <view contentMode="scaleToFill" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="PUY-TZ-J0g" userLabel="line">
+                        <frame key="frameInset" minX="15" minY="42" width="272" height="1"/>
+                        <color key="backgroundColor" red="0.78823529410000004" green="0.78039215689999997" blue="0.80392156859999997" alpha="1" colorSpace="calibratedRGB"/>
+                        <constraints>
+                            <constraint firstAttribute="height" constant="0.5" id="WFx-hK-tTk"/>
+                        </constraints>
+                    </view>
                 </subviews>
                 <constraints>
-                    <constraint firstItem="FeF-1c-ozQ" firstAttribute="height" secondItem="H2p-sc-9uM" secondAttribute="height" multiplier="0.6" id="6FE-tA-JGP"/>
+                    <constraint firstItem="PUY-TZ-J0g" firstAttribute="trailing" secondItem="H2p-sc-9uM" secondAttribute="trailing" id="3Mj-7G-FWu"/>
+                    <constraint firstItem="FeF-1c-ozQ" firstAttribute="height" secondItem="H2p-sc-9uM" secondAttribute="height" multiplier="0.4" id="6FE-tA-JGP"/>
+                    <constraint firstItem="PUY-TZ-J0g" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="20" id="Pag-8c-m9S"/>
                     <constraint firstItem="2BI-U7-fEJ" firstAttribute="centerY" secondItem="H2p-sc-9uM" secondAttribute="centerY" id="QsP-7O-RRf"/>
                     <constraint firstItem="FeF-1c-ozQ" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="24" id="dfY-fL-qyA"/>
+                    <constraint firstItem="PUY-TZ-J0g" firstAttribute="top" secondItem="FeF-1c-ozQ" secondAttribute="bottom" constant="10" id="w3L-7s-BMb"/>
                     <constraint firstItem="FeF-1c-ozQ" firstAttribute="centerY" secondItem="H2p-sc-9uM" secondAttribute="centerY" id="xrJ-So-njj"/>
                     <constraint firstItem="2BI-U7-fEJ" firstAttribute="leading" secondItem="FeF-1c-ozQ" secondAttribute="trailing" constant="10" id="yQs-ll-15b"/>
                 </constraints>
